--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   width: 100%;
   height: 100vh;
-  background: #ffffff;
+  background: #f5f5f5;
   color: #000;
   overflow-x: hidden;
   font-family: "Poppins", serif;
@@ -62,7 +62,7 @@ header a {
   right: 0;
   width: 40%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 1);
   z-index: -1;
 }
 
@@ -145,7 +145,7 @@ p {
   right: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 1);
   z-index: -1;
 }
 
